--- a/style.css
+++ b/style.css
@@ -90,6 +90,32 @@ form .input-field {
   outline: none;
   border: none;
   border-radius: 0.5rem;
+  
   padding: 0 1rem;
   border: 1px solid transparent;
+}
+
+@media (max-width: 560px) {
+  .container {
+    max-width: 20rem;
+  }
+  .input-field {
+    margin: 0.5rem 0;
+  }
+  button {
+    padding: 0.3rem 0.6rem;
+    margin-top: 0.6rem;
+  }
+  .input-field-gd label {
+    font-size: small;
+  }
+  .input-field input {
+    padding: 0.6rem 0.8rem;
+  }
+  .container form {
+    margin-top: 0.4rem;
+  }
+  .field {
+    width: 85%;
+  }
 }
